# Just-Study

./: README.md  main.py  pyproject.toml
templates/: createtimetable1.html  createtimetable2.html  createtimetable3.html  dashboard.html  index.html  login.html  logout.html  profile.html  signup.html  timetable.html
