[tool.poetry]
name = "repl_python3_Just-Study-test"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
flask = "^1.1.2"
pymongo = "^3.11.4"
flask-pymongo = "^2.3.0"
dnspython = "^2.1.0"
bcrypt = "^3.2.0"
flask-simple-captcha = "^1.1.0"
django = "^3.2.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
